Fix issue with spacing between the navbar signup and login buttons in main.html

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -101,10 +101,10 @@
                         <p id="cart-total">{{cartItems}}</p>
                     {% else %}
                         <div>
-                            <a href="{% url 'signup' %}" class="btn btn-light">Sign up</a>
+                            <a href="{% url 'signup' %}" class="btn btn-light mr-1">Sign up</a>
                         </div>
                         <div>
-                            <a href="{% url 'login' %}" class="btn btn-light">Log in</a>
+                            <a href="{% url 'login' %}" class="btn btn-light ml-1">Log in</a>
                         </div>
                     {% endif %}
                </div>
