Remove maximum-scale=1 and minimum-scale=1 from the viewport meta tag and chnage style of Mailchimp's button

--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -32,7 +32,7 @@
         slant-six, software, speed, sprockets, straight-6, straight-six, stroke, supplier, supra, system, throttle,
         timing, top, torque, toyota, transmission, tuning, turbo, turbocharged, turbocharger, twin-turbo, unit,
         valve, valvetrain, vehicle, vibration, warranty, website">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript">
             // JavaScript variable to query the user to check his/her status
             var user = '{{request.user}}'
@@ -165,7 +165,7 @@
                                     <div class="optionalParent">
                                         <div class="clear foot">
                                             <input type="submit" value="Subscribe" name="subscribe" 
-                                            id="mc-embedded-subscribe" class="button">
+                                            id="mc-embedded-subscribe" class="button bg-white text-dark font-weight-bold">
                                             <p class="brandingLogo">
                                                 <a href="http://eepurl.com/ifBaLH" target="_blank" 
                                                 aria-label="Made with Mailchimp (opens in a new tab)" 
