--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -35,7 +35,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script type="text/javascript">
             // JavaScript variable to query the user to check his/her status
-            var user = '{{request.user}}'
+            var user = '{{request.user}}';
             // JavaScript function to create a customized CSRF token and prevent the updateUserOrder function in //
             // cart.js to throw an error //
             function getToken(name) {
