Create the Testing User Stories, Further Testing and Security sub-sections of the README.md file

--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -90,7 +90,7 @@
         This shape also leaves a lot of extra space along the sides of the engine bay for performance enhancers like 
         turbos and exhaust headers (please see <a href="https://www.youtube.com/watch?v=JfaJ35vVQ9A" target="_blank" 
         aria-label="Inline-6 vs. V6 - How It Works - Science Garage (opens in a new tab)" 
-        rel="external noopener noreferrer nofollow">Donut Media's video on the Inline-6 engine</a> for more 
+        rel="external noopener noreferrer nofollow">Donut Media's video on the inline-6 engine</a> for more 
         information).
     </p>
 {% endblock content %}
